# PX4Study

./: CLAUDE.md  Makefile
Study/: devlog.md  learn.md  new_pc_setup.md  target.md
boards/st/nucleo-h743/: CMakeLists.txt  default.px4board  firmware.prototype  openocd.cfg  openocd_relay.py  relay_server.ps1  setup_relay.ps1  start_openocd.ps1  wait_openocd.sh
boards/st/nucleo-h743/init/: rc.board_mavlink  rc.board_sensors
boards/st/nucleo-h743/nuttx-config/include/: board.h  board_dma_map.h
boards/st/nucleo-h743/nuttx-config/nsh/: defconfig
boards/st/nucleo-h743/nuttx-config/scripts/: script.ld
boards/st/nucleo-h743/src/: CMakeLists.txt  board_config.h  i2c.cpp  init.c  led.c  led_chaser.cpp  spi.cpp  timer_config.cpp
src/drivers/: drv_sensor.h
src/drivers/imu/invensense/mpu6050/: CMakeLists.txt  InvenSense_MPU6050_registers.hpp  Kconfig  MPU6050.cpp  MPU6050.hpp  mpu6050_main.cpp
tool/: mpu6050_viewer.py  mpu6050_web.py  requirements.txt
